src/test/ui/array-slice-vec/suggest-array-length.stderr
error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/suggest-array-length.rs:8:20
   |
LL |     let foo: [i32; _] = [1, 2, 3];
   |                    ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/suggest-array-length.rs:11:20
   |
LL |     let bar: [i32; _] = [0; 3];
   |                    ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/suggest-array-length.rs:5:22
   |
LL |     const Foo: [i32; _] = [1, 2, 3];
   |                      ^ `_` not allowed here

error[E0658]: using `_` for array lengths is unstable
  --> $DIR/suggest-array-length.rs:5:22
   |
LL |     const Foo: [i32; _] = [1, 2, 3];
   |                      ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
help: consider adding an array length
   |
LL |     const Foo: [i32; 3] = [1, 2, 3];
   |                      ~

error[E0658]: using `_` for array lengths is unstable
  --> $DIR/suggest-array-length.rs:8:20
   |
LL |     let foo: [i32; _] = [1, 2, 3];
   |                    ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
help: consider adding an array length
   |
LL |     let foo: [i32; 3] = [1, 2, 3];
   |                    ~

error[E0658]: using `_` for array lengths is unstable
  --> $DIR/suggest-array-length.rs:11:20
   |
LL |     let bar: [i32; _] = [0; 3];
   |                    ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
help: consider adding an array length
   |
LL |     let bar: [i32; 3] = [0; 3];
   |                    ~

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
